fix: remove navbar collapsable, add fa cart icon

--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -30,3 +30,8 @@ a {
   padding: 2px 6px;
   border-radius: 50%;
 }
+
+.pull-right {
+  float: right;
+}
+
